tests/end-to-end/code-coverage/_files/parse-error/vendor/autoload.php
<?php declare(strict_types=1);

require __DIR__ . '/../src/Foo.php';
require __DIR__ . '/../src/CustomDriverWithFakeData.php';
